src/test/resources/amyc/parser/failing/IntError3.amy
object IntError 
  fn foo(): Int(true) = { 42 }
end IntError